Fix URL overflow from contents
* URLがはみ出すバグを修正

--- a/resources/assets/css/base.css
+++ b/resources/assets/css/base.css
@@ -1,5 +1,6 @@
 body {
   background: #f0f3f3;
+  word-wrap: break-word;
 }
 
 a {
